Generalize and extract tmux theme configuration for tokyonight moon and storm flavors

--- a/terminal/tmux/tmux-tokyonight-storm.conf
+++ b/terminal/tmux/tmux-tokyonight-storm.conf
@@ -1,38 +1,10 @@
 #!/usr/bin/env bash
 
-# TokyoNight colors for Tmux
+# TokyoNight Storm colors for Tmux
 
-set -g mode-style "fg=#7aa2f7,bg=#3b4261"
-
-set -g message-style "fg=#7aa2f7,bg=#3b4261"
-set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
-
-set -g pane-border-style "fg=#3b4261"
-set -g pane-active-border-style "fg=#7aa2f7"
-
-set -g status "on"
-set -g status-justify "left"
-
-set -g status-style "fg=#7aa2f7,bg=#1f2335"
-
-set -g status-left-length "100"
-set -g status-right-length "100"
-
-set -g status-left-style NONE
-set -g status-right-style NONE
-
-set -g status-right "#{prefix_highlight}#[fg=#7aa2f7,bg=#3b4261] #{clima}   🗓  %a %d %b, %Y  🕑 %I:%M %p #[fg=#1d202f,bg=#7aa2f7,bold] #h #[fg=#1d202f,bg=#7aa2f7,bold]"
-
-set -g status-left "#[fg=#1d202f,bg=#7aa2f7,bold] \ue795 #S #[fg=#7aa2f7,bg=#1f2335,nobold,nounderscore,noitalics]"
-
-
-setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#1f2335"
-setw -g window-status-separator ""
-setw -g window-status-style "NONE,fg=#a9b1d6,bg=#1f2335"
-
-setw -g window-status-format "#[default]  #I:#W #[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#7aa2f7,bg=#3b4261,bold] #I:#W#{?window_zoomed_flag,*Z,} #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]"
-
-# tmux-plugins/tmux-prefix-highlight support
-set -g @prefix_highlight_output_prefix "#[fg=#1f2335]#[bg=#e0af68]"
-set -g @prefix_highlight_output_suffix ""
+thm_fg="#7aa2f7"
+thm_bg="#3b4261"
+thm_black="#1f2335"
+thm_yellow="#e0af68"
+thm_gray="#a9b1d6"
+thm_black2="#1d202f"
