--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -116,6 +116,39 @@ set -g mouse on
 # Set clipboard on
 set -g set-clipboard on
 
+######################
+# Setup status style #
+######################
+set -g mode-style "fg=$thm_fg,bg=$thm_bg"
+
+set -g message-style "fg=$thm_fg,bg=$thm_bg"
+set -g message-command-style "fg=$thm_fg,bg=$thm_bg"
+
+set -g pane-border-style "fg=$thm_bg"
+set -g pane-active-border-style "fg=$thm_fg"
+
+set -g status "on"
+set -g status-justify "left"
+
+set -g status-style "fg=$thm_fg,bg=$thm_black"
+
+set -g status-left-length "100"
+set -g status-right-length "100"
+
+set -g status-left-style NONE
+set -g status-right-style NONE
+
+set -g status-right "#[fg=$thm_fg,bg=$thm_bg] #{clima}      %a %d %b, %Y  🕑 %I:%M %p #[fg=$thm_black2,bg=$thm_fg,bold] #h #[fg=$thm_black2,bg=$thm_fg,bold]"
+
+set -g status-left "#[fg=$thm_black2,bold]#{?client_prefix,#[bg=$thm_yellow],#[bg=$thm_fg]} \ue795 #S #[fg=$thm_fg,bg=$thm_black,nobold,nounderscore,noitalics]"
+
+setw -g window-status-activity-style "underscore,fg=$thm_gray,bg=$thm_black"
+setw -g window-status-separator ""
+setw -g window-status-style "NONE,fg=$thm_gray,bg=$thm_black"
+
+setw -g window-status-format "#[default]  #I:#W #[fg=$thm_black,bg=$thm_black,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=$thm_fg,bg=$thm_bg,bold] #I:#W#{?window_zoomed_flag, ,} #[fg=$thm_bg,bg=$thm_black,nobold,nounderscore,noitalics]"
+
 #####################
 # Plugins Section   #
 #####################
