Change the tmux default-terminal back to xterm-256color due to issues with remote linux servers

--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -1,5 +1,5 @@
 # Initial setup
-set -g default-terminal xterm-kitty
+set -g default-terminal xterm-256color
 set -ga terminal-overrides ",xterm-kitty:RGB,alacritty:RGB,*256col*:RGB"
 set -g status-keys vi
 set-option -g focus-events on
