--- a/terminal/tmux/tmux-status-style.conf
+++ b/terminal/tmux/tmux-status-style.conf
@@ -11,9 +11,9 @@ set -g pane-active-border-style "fg=$thm_fg"
 
 set -g status-style "fg=$thm_fg,bg=$thm_black"
 
-set -g status-right "#[fg=$thm_fg,bg=$thm_bg] #{clima}      %a %d %b, %Y  🕑 %I:%M %p #[fg=$thm_black2,bg=$thm_fg,bold] #h #[fg=$thm_black2,bg=$thm_fg,bold]"
+set -g status-right "#[fg=$thm_fg,bg=$thm_bg] #{clima}     %a %d %b, %Y  🕑 %I:%M %p #[fg=$thm_black2,bg=$thm_fg,bold] #h #[fg=$thm_black2,bg=$thm_fg,bold]"
 
-set -g status-left "#[fg=$thm_black2,bold]#{?client_prefix,#[bg=$thm_yellow],#[bg=$thm_fg]} \ue795 #S #[fg=$thm_fg,bg=$thm_black,nobold,nounderscore,noitalics]"
+set -g status-left "#[fg=$thm_black2,bold]#{?client_prefix,#[bg=$thm_yellow],#[bg=$thm_fg]}   #S #[fg=$thm_fg,bg=$thm_black,nobold,nounderscore,noitalics]"
 
 setw -g window-status-activity-style "underscore,fg=$thm_gray,bg=$thm_black"
 setw -g window-status-style "NONE,fg=$thm_gray,bg=$thm_black"
