--- a/terminal/tmux/themes/tmux-tokyonight-storm.conf
+++ b/terminal/tmux/themes/tmux-tokyonight-storm.conf
@@ -5,10 +5,11 @@
 thm_fg="#7aa2f7"
 thm_bg="#3b4261"
 thm_black="#1f2335"
-thm_yellow="#E5C890"
+thm_yellow="#e0af68"
 thm_gray="#a9b1d6"
-thm_green="#A6D189"
-thm_red="#E78284"
+thm_green="#9ece6a"
+thm_red="#f7768e"
+thm_blue="#7dcfff"
 thm_black2="#1d202f"
-thm_magenta="#F4B8E4"
-thm_cyan="#81C8BE"
+thm_magenta="#bb9af7"
+thm_cyan="#73daca"
