--- a/terminal/starship/starship.toml
+++ b/terminal/starship/starship.toml
@@ -1,5 +1,7 @@
 # ~/.config/starship.toml
 
+palette = "tokyonight_storm"
+
 # Inserts a blank line between shell prompts
 add_newline = true
 
@@ -47,8 +49,8 @@ format = " [$state($progress_current$progress_total)]($style)"
 
 # Change the default prompt characters
 [character]
-success_symbol = "[](bold #80a856)"
-error_symbol = "[](bold #bb616b)"
+success_symbol = "[](bold green)"
+error_symbol = "[](bold red)"
 
 # No need for env variables as starship provides a way to show your current distro
 [os]
@@ -98,7 +100,7 @@ Windows = "󰖳 "
 
 # Shows the username
 [username]
-style_user = "#7aa2f7 bold"
+style_user = "blue bold"
 style_root = "black bold"
 format = " [$user]($style)"
 disabled = true  # disable in powershell
@@ -108,8 +110,8 @@ show_always = false
 truncation_length = 4
 truncation_symbol = "…/"
 truncate_to_repo = false
-style = "#7aa2f7"
-repo_root_style =  "#7aa2f7 bold"
+style = "blue1"
+repo_root_style =  "blue1 bold"
 read_only_style = "197"
 read_only = " 🔒"
 format = " [$path]($style)[$read_only]($read_only_style)"
@@ -118,23 +120,23 @@ repo_root_format = " [$before_root_path]($before_repo_root_style)[$repo_root]($r
 [git_branch]
 symbol = "\uF126"
 format = " [$symbol $branch]($style)"
-style = "#80a856"
+style = "green"
 
 [git_commit]
 tag_disabled = false
 
 [git_status]
 format = "[$all_status$ahead_behind]($style)"
-style = "#80a856"
-untracked = " [?${count}](#3d59a1)"
+style = "green"
+untracked = " [?${count}](blue0)"
 ahead = " ⇡${count}"
 diverged = " ⇡${ahead_count} ⇣${behind_count}"
 behind = " ⇣${count}"
 stashed = " 󰏗 ${count}"
-modified = " [!${count}](#cfa25f)"
-staged = " [+${count}](#cfa25f)"
-renamed = " [»${count}](#3d59a1)"
-deleted = " [✗${count}](#bb616b)"
+modified = " [!${count}](yellow)"
+staged = " [+${count}](yellow)"
+renamed = " [»${count}](blue0)"
+deleted = " [✗${count}](red)"
 
 # Configure the SSH prompt
 [hostname]
@@ -173,7 +175,7 @@ style = "dimmed red"
 # Configure the Java module
 [java]
 format = "[  $version]($style)"
-style = "dimmed #871094"
+style = "dimmed purple"
 
 [aws]
 disabled = true
@@ -186,10 +188,10 @@ format = "[ 󱁢 $version]($style)"
 format = "[ V vagrant $version]($style)"
 
 [docker_context]
-format = "[  $context](bold #1750EB)"
+format = "[  $context](blue bold)"
 
 [helm]
-format = "[  $version](bold #871094)"
+format = "[  $version](bold purple)"
 
 [python]
 format = "[ 󰌠 $version ($virtualenv)]($style)"
@@ -198,7 +200,7 @@ format = "[ 󰌠 $version ($virtualenv)]($style)"
 format = "[  $version]($style)"
 
 [kubernetes]
-format = "[ 󱃾 $context](bold #871094)"
+format = "[ 󱃾 $context](bold purple)"
 disabled = true
 
 [cmd_duration]
@@ -215,5 +217,60 @@ python $HOME/.config/get_git_host.py $PWD
 """
 directories = [".git"]
 when = "git rev-parse --is-inside-work-tree"
-style = "#80a856"
+style = "green"
 format = " [$output]($style)"
+
+[palettes.catppuccin_frappe]
+rosewater = "#f2d5cf"
+flamingo = "#eebebe"
+pink = "#f4b8e4"
+mauve = "#ca9ee6"
+red = "#e78284"
+maroon = "#ea999c"
+peach = "#ef9f76"
+yellow = "#e5c890"
+green = "#a6d189"
+teal = "#81c8be"
+sky = "#99d1db"
+sapphire = "#85c1dc"
+blue = "#8caaee"
+lavender = "#babbf1"
+text = "#c6d0f5"
+subtext1 = "#b5bfe2"
+subtext0 = "#a5adce"
+overlay2 = "#949cbb"
+overlay1 = "#838ba7"
+overlay0 = "#737994"
+surface2 = "#626880"
+surface1 = "#51576d"
+surface0 = "#414559"
+base = "#303446"
+mantle = "#292c3c"
+crust = "#232634"
+
+[palettes.tokyonight_storm]
+base = "#414868"
+bg = "#24283b"
+blue = "#7aa2f7"
+blue0 = "#3d59a1"
+blue1 = "#2ac3de"
+blue2 = "#0db9d7"
+blue5 = "#89ddff"
+blue6 = "#b4f9f8"
+blue7 = "#394b70"
+bright_red = "#db4b4b"
+crust = "#1d202f"
+cyan = "#7dcfff"
+fg = "#c0caf5"
+green = "#9ece6a"
+green1 = "#73daca"
+green2 = "#41a6b5"
+magenta = "#bb9af7"
+magenta2 = "#ff007c"
+orange = "#ff9e64"
+purple = "#9d7cd8"
+red = "#f7768e"
+red1 = "#db4b4b"
+teal = "#1abc9c"
+text = "#a9b1d6"
+yellow = "#e0af68"
