Add a tmux keybind for mouse selection and add an icon when config reloaded

--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -25,6 +25,7 @@ unbind p
 bind p paste-buffer
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection-and-cancel
 
 # rename window to reflect current program
 setw -g automatic-rename on
@@ -58,7 +59,7 @@ set-option -g status-right-length "100"
 setw -g window-status-separator ""
 
 # Easy config reload
-bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
+bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded 🚀"
 
 source-file ~/Documents/IdeaProjects/terminal-configs/terminal/tmux/themes/tmux-tokyonight-storm.conf
 source-file ~/Documents/IdeaProjects/terminal-configs/terminal/tmux/tmux-status-style.conf
