Change default kitty terminal to xterm-256color

--- a/terminal/kitty/kitty.conf
+++ b/terminal/kitty/kitty.conf
@@ -88,7 +88,7 @@ clipboard_control write-clipboard write-primary read-clipboard-ask read-primary-
 allow_hyperlinks yes
 shell_integration no-cursor
 #: The value of the TERM environment variable to set.
-# term xterm-kitty
+term xterm-256color
 
 #: Specify the environment variables to be set in all child processes.
 
