--- a/terminal/kitty/kitty.conf
+++ b/terminal/kitty/kitty.conf
@@ -101,8 +101,8 @@ term xterm-256color
 
 wayland_titlebar_color system
 macos_titlebar_color dark
-macos_option_as_alt no
-macos_quit_when_last_window_closed no
+macos_option_as_alt yes
+macos_quit_when_last_window_closed yes
 macos_window_resizable yes
 #: Use the macOS traditional full-screen transition, that is faster,
 #: but less pretty.
