Change color theme to catppuccin-macchiato for kitty,delta,bat,neovim etc.

--- a/terminal/starship/starship.toml
+++ b/terminal/starship/starship.toml
@@ -1,6 +1,6 @@
 # ~/.config/starship.toml
 
-palette = "tokyonight_storm"
+palette = "catppuccin_macchiato"
 
 # Inserts a blank line between shell prompts
 add_newline = true
@@ -110,8 +110,8 @@ show_always = false
 truncation_length = 4
 truncation_symbol = "…/"
 truncate_to_repo = false
-style = "blue1"
-repo_root_style =  "blue1 bold"
+style = "blue"
+repo_root_style =  "blue bold"
 read_only_style = "197"
 read_only = " 🔒"
 format = " [$path]($style)[$read_only]($read_only_style)"
@@ -247,6 +247,34 @@ surface0 = "#414559"
 base = "#303446"
 mantle = "#292c3c"
 crust = "#232634"
+
+[palettes.catppuccin_macchiato]
+rosewater = "#f4dbd6"
+flamingo = "#f0c6c6"
+pink = "#f5bde6"
+mauve = "#c6a0f6"
+red = "#ed8796"
+maroon = "#ee99a0"
+peach = "#f5a97f"
+yellow = "#eed49f"
+green = "#a6da95"
+teal = "#8bd5ca"
+sky = "#91d7e3"
+sapphire = "#7dc4e4"
+blue = "#8aadf4"
+lavender = "#b7bdf8"
+text = "#cad3f5"
+subtext1 = "#b8c0e0"
+subtext0 = "#a5adcb"
+overlay2 = "#939ab7"
+overlay1 = "#8087a2"
+overlay0 = "#6e738d"
+surface2 = "#5b6078"
+surface1 = "#494d64"
+surface0 = "#363a4f"
+base = "#24273a"
+mantle = "#1e2030"
+crust = "#181926"
 
 [palettes.tokyonight_storm]
 base = "#414868"
