--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -45,6 +45,9 @@ set-option -g @clima_ttl 5
 # clima location
 set-option -g @clima_location ""
 
+# clima use nerd font
+set-option -g @clima_use_nerd_font 0
+
 # set terminal title
 set -g set-titles on
 
@@ -60,9 +63,6 @@ setw -g window-status-separator ""
 
 # Easy config reload
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded 🚀"
-
-source-file ~/Documents/IdeaProjects/terminal-configs/terminal/tmux/themes/tmux-tokyonight-storm.conf
-source-file ~/Documents/IdeaProjects/terminal-configs/terminal/tmux/tmux-status-style.conf
 
 # No delay for escape key press
 set -sg escape-time 0
@@ -118,11 +118,46 @@ set -g mouse on
 # Set clipboard on
 set -g set-clipboard on
 
+set -g @catppuccin_flavour "macchiato"
+set -g @catppuccin_session_icon ""
+set -g @catppuccin_window_left_separator " "
+set -g @catppuccin_window_right_separator ""
+set -g @catppuccin_window_middle_separator " "
+set -g @catppuccin_window_number_position "left"
+
+set -g @catppuccin_window_default_fill "all"
+set -g @catppuccin_window_default_text "#W"
+
+set -g @catppuccin_window_current_fill "all"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_modules_right "clima date_time host"
+set -g @catppuccin_status_modules_left "session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+set -g @catppuccin_directory_text "#{pane_current_path}"
+set -g @catppuccin_date_time_text "%a %d %b,%Y %I:%M %p"
+
+set -g @catppuccin_icon_window_last "null"
+set -g @catppuccin_icon_window_current "null"
+set -g @catppuccin_icon_window_zoom " "
+set -g @catppuccin_icon_window_mark "null"
+set -g @catppuccin_icon_window_silent "null"
+set -g @catppuccin_icon_window_activity "󱅫 "
+set -g @catppuccin_icon_window_bell "null"
+
+set -g @catppuccin_window_status_enable "yes"
+set -g @catppuccin_window_status_icon_enable "yes"
+
 #####################
 # Plugins Section   #
 #####################
 
 # List of plugins
+set -g @plugin 'xafarr/catppuccin-tmux#tmux-clima'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
