Change the catppuccin window middle separator for tmux status line

--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -122,7 +122,7 @@ set -g @catppuccin_flavour "macchiato"
 set -g @catppuccin_session_icon ""
 set -g @catppuccin_window_left_separator " "
 set -g @catppuccin_window_right_separator ""
-set -g @catppuccin_window_middle_separator " "
+set -g @catppuccin_window_middle_separator "│"
 set -g @catppuccin_window_number_position "left"
 
 set -g @catppuccin_window_default_fill "all"
