Change directory color in starship prompt to catppuccin sapphire

--- a/terminal/starship/starship.toml
+++ b/terminal/starship/starship.toml
@@ -110,8 +110,8 @@ show_always = false
 truncation_length = 4
 truncation_symbol = "…/"
 truncate_to_repo = false
-style = "blue"
-repo_root_style =  "blue bold"
+style = "sapphire"
+repo_root_style =  "sapphire bold"
 read_only_style = "197"
 read_only = " 🔒"
 format = " [$path]($style)[$read_only]($read_only_style)"
