Change to original catppuccin/tmux project after PR merged to intergate tmux-clima

--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -157,7 +157,7 @@ set -g @catppuccin_window_status_icon_enable "yes"
 #####################
 
 # List of plugins
-set -g @plugin 'xafarr/catppuccin-tmux#tmux-clima'
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
