--- a/terminal/starship/starship.toml
+++ b/terminal/starship/starship.toml
@@ -213,7 +213,7 @@ format = "[ 󱈙 $version]($style)"
 
 [custom.git_host]
 command = """
-python $HOME/.config/get_git_host.py $PWD
+python3 $HOME/.config/get_git_host.py $PWD
 """
 directories = [".git"]
 when = "git rev-parse --is-inside-work-tree"
