Close ITerm when last window is closed

--- a/terminal/Iterm/com.googlecode.iterm2.plist
+++ b/terminal/Iterm/com.googlecode.iterm2.plist
@@ -5152,6 +5152,10 @@
 	</dict>
 	<key>Print In Black And White</key>
 	<true/>
+	<key>PromptOnQuit</key>
+	<false/>
+	<key>QuitWhenAllWindowsClosed</key>
+	<true/>
 	<key>SoundForEsc</key>
 	<false/>
 	<key>TmuxUnpauseAutomatically</key>
