Change the formatting and linting configuration for Markdown files

--- a/nvim/.markdownlint.jsonc
+++ b/nvim/.markdownlint.jsonc
@@ -20,7 +20,13 @@
     // Stern length checking
     "stern": false
   },
+  // MD007/ul-indent : Unordered list indentation : https://github.com/DavidAnson/markdownlint/blob/v0.34.0/doc/md007.md
   "MD007": {
-    "indent": 2
+    // Spaces for indent
+    "indent": 2,
+    // Whether to indent the first level of the list
+    "start_indented": true,
+    // Spaces for first level indent (when start_indented is set)
+    "start_indent": 2
   }
 }
