Recommended terminal settings for tmux

--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -1,10 +1,10 @@
 # Initial setup
-set -g default-terminal xterm-256color
-set -ga terminal-overrides ",xterm-kitty:RGB,alacritty:RGB,*256col*:RGB"
+set -g default-terminal "tmux-256color"
 set -g status-keys vi
 set-option -g focus-events on
 
-# undercurl support
+set-option -gas terminal-overrides "*:Tc" # true color support
+set-option -gas terminal-overrides "*:RGB" # true color support
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
