--- a/terminal/kitty/kitty.conf
+++ b/terminal/kitty/kitty.conf
@@ -3,9 +3,9 @@
 #: Fonts {{{
 
 font_family      JetBrainsMono Nerd Font Medium
-bold_font        JetBrainsMono Nerd Font Bold
+bold_font        JetBrainsMono Nerd Font ExtraBold
 italic_font      JetBrainsMono Nerd Font Medium Italic
-bold_italic_font JetBrainsMono Nerd Font Bold Italic
+bold_italic_font JetBrainsMono Nerd Font ExtraBold Italic
 font_size 17.0
 disable_ligatures cursor
 undercurl_style thin-dense
