--- a/terminal/starship/starship.toml
+++ b/terminal/starship/starship.toml
@@ -10,7 +10,7 @@ command_timeout = 5000
 
 # Change the default prompt format
 format = """\
-[╭─](244)$os\
+$os\
 $battery\
 $directory\
 ${custom.git_host}\
@@ -30,7 +30,7 @@ $ruby\
 $hostname\
 $jobs\
 $cmd_duration
-[╰─](244)$character"""
+$character"""
 
 # Fill · in first row between left and right prompt
 [fill]
@@ -49,8 +49,8 @@ format = " [$state($progress_current$progress_total)]($style)"
 
 # Change the default prompt characters
 [character]
-success_symbol = "[](bold green)"
-error_symbol = "[](bold red)"
+success_symbol = " [](bold green)"
+error_symbol = " [](bold red)"
 
 # No need for env variables as starship provides a way to show your current distro
 [os]
