--- a/terminal/kitty/kitty.conf
+++ b/terminal/kitty/kitty.conf
@@ -2,10 +2,10 @@
 
 #: Fonts {{{
 
-font_family      JetBrainsMono Nerd Font Medium
-bold_font        JetBrainsMono Nerd Font ExtraBold
-italic_font      JetBrainsMono Nerd Font Medium Italic
-bold_italic_font JetBrainsMono Nerd Font ExtraBold Italic
+font_family      FiraCode Nerd Font Regular
+bold_font        FiraCode Nerd Font Bold
+italic_font      FiraCode Nerd Font Regular Italic
+bold_italic_font FiraCode Nerd Font Bold Italic
 font_size 17.0
 disable_ligatures cursor
 undercurl_style thin-dense
