Make the current window text bold in tmux

--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -129,7 +129,7 @@ set -g @catppuccin_window_default_fill "all"
 set -g @catppuccin_window_default_text "#W"
 
 set -g @catppuccin_window_current_fill "all"
-set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_window_current_text "#[fg=#{thm_bg},bold]#W"
 
 set -g @catppuccin_status_modules_right "clima date_time host"
 set -g @catppuccin_status_modules_left "session"
