Disable kitty shell integration

--- a/terminal/kitty/kitty.conf
+++ b/terminal/kitty/kitty.conf
@@ -86,7 +86,7 @@ editor .
 allow_remote_control no
 clipboard_control write-clipboard write-primary read-clipboard-ask read-primary-ask
 allow_hyperlinks yes
-shell_integration no-cursor
+shell_integration disabled
 #: The value of the TERM environment variable to set.
 #: term xterm-256color
 
