--- a/git/lazygit/config.yml
+++ b/git/lazygit/config.yml
@@ -1,24 +1,26 @@
 gui:
   theme:
     activeBorderColor:
-      - '#7dc4e4'
+      - '#89b4fa'
       - bold
     inactiveBorderColor:
-      - '#a5adcb'
+      - '#a6adc8'
     optionsTextColor:
-      - '#8aadf4'
+      - '#89b4fa'
     selectedLineBgColor:
-      - '#363a4f'
+      - '#313244'
     cherryPickedCommitBgColor:
-      - '#494d64'
+      - '#45475a'
     cherryPickedCommitFgColor:
-      - '#7dc4e4'
+      - '#89b4fa'
     unstagedChangesColor:
-      - '#ed8796'
+      - '#f38ba8'
     defaultFgColor:
-      - '#cad3f5'
+      - '#cdd6f4'
     searchingActiveBorderColor:
-      - '#eed49f'
+      - '#f9e2af'
+  authorColors:
+    '*': '#b4befe' 
 git:
   paging:
     colorArg: always
