--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -131,7 +131,7 @@ set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_current_fill "all"
 set -g @catppuccin_window_current_text "#[fg=#{thm_bg},bold]#W"
 
-set -g @catppuccin_status_modules_right "clima date_time host"
+set -g @catppuccin_status_modules_right "clima uptime date_time host"
 set -g @catppuccin_status_modules_left "session"
 set -g @catppuccin_status_left_separator  " "
 set -g @catppuccin_status_right_separator ""
