Replace deprecated properties with the recommended ones in tmux.conf for catppuccin

--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -118,7 +118,7 @@ set -g mouse on
 # Set clipboard on
 set -g set-clipboard on
 
-set -g @catppuccin_flavour "mocha"
+set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_session_icon ""
 set -g @catppuccin_window_left_separator " "
 set -g @catppuccin_window_right_separator ""
@@ -149,8 +149,7 @@ set -g @catppuccin_icon_window_silent "null"
 set -g @catppuccin_icon_window_activity "󱅫 "
 set -g @catppuccin_icon_window_bell "null"
 
-set -g @catppuccin_window_status_enable "yes"
-set -g @catppuccin_window_status_icon_enable "yes"
+set -g @catppuccin_window_status "icon"
 
 #####################
 # Plugins Section   #
