Change the theme of all terminal tools to Catppuccin Macchiato

--- a/terminal/starship/starship.toml
+++ b/terminal/starship/starship.toml
@@ -1,6 +1,6 @@
 # ~/.config/starship.toml
 
-palette = "catppuccin_mocha"
+palette = "catppuccin_macchiato"
 
 # Inserts a blank line between shell prompts
 add_newline = true
