--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -118,7 +118,7 @@ set -g mouse on
 # Set clipboard on
 set -g set-clipboard on
 
-set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_flavor "macchiato"
 set -g @catppuccin_session_icon ""
 set -g @catppuccin_window_left_separator " "
 set -g @catppuccin_window_right_separator ""
