--- a/terminal/kitty/kitty.conf
+++ b/terminal/kitty/kitty.conf
@@ -2,10 +2,10 @@
 
 #: Fonts {{{
 
-font_family      FiraCode Nerd Font Regular
-bold_font        FiraCode Nerd Font Bold
-italic_font      FiraCode Nerd Font Regular Italic
-bold_italic_font FiraCode Nerd Font Bold Italic
+font_family      JetBrains Mono Regular
+bold_font        JetBrains Mono Bold
+italic_font      JetBrains Mono Italic
+bold_italic_font JetBrains Mono Bold Italic
 font_size 17.0
 disable_ligatures cursor
 undercurl_style thin-dense
