Improve tmux config and move tmux config to XDG_CONFIG_HOME

--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -119,37 +119,52 @@ set -g mouse on
 set -g set-clipboard on
 
 set -g @catppuccin_flavor "macchiato"
-set -g @catppuccin_session_icon ""
+set -g @catppuccin_window_status "icon"
+set -g @catppuccin_window_status_style "custom"
+set -g @catppuccin_date_time_text "%a %d %b,%Y %I:%M %p"
+set -g @catppuccin_session_icon " "
+set -g @catppuccin_clima_icon "󰔐 "
 set -g @catppuccin_window_left_separator " "
 set -g @catppuccin_window_right_separator ""
-set -g @catppuccin_window_middle_separator "│"
+#set -g @catppuccin_window_middle_separator "│"
 set -g @catppuccin_window_number_position "left"
 
 set -g @catppuccin_window_default_fill "all"
 set -g @catppuccin_window_default_text "#W"
 
 set -g @catppuccin_window_current_fill "all"
-set -g @catppuccin_window_current_text "#[fg=#{thm_bg},bold]#W"
+set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_window_current_style "bold"
 
-set -g @catppuccin_status_modules_right "clima uptime date_time host"
-set -g @catppuccin_status_modules_left "session"
 set -g @catppuccin_status_left_separator  " "
 set -g @catppuccin_status_right_separator ""
 set -g @catppuccin_status_right_separator_inverse "no"
 set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
-set -g @catppuccin_directory_text "#{pane_current_path}"
-set -g @catppuccin_date_time_text "%a %d %b,%Y %I:%M %p"
+#set -g @catppuccin_directory_text "#{pane_current_path}"
 
 set -g @catppuccin_icon_window_last "null"
 set -g @catppuccin_icon_window_current "null"
-set -g @catppuccin_icon_window_zoom " "
-set -g @catppuccin_icon_window_mark "null"
-set -g @catppuccin_icon_window_silent "null"
-set -g @catppuccin_icon_window_activity "󱅫 "
-set -g @catppuccin_icon_window_bell "null"
+set -g @catppuccin_window_zoom_icon " "
+#set -g @catppuccin_icon_window_mark "null"
+#set -g @catppuccin_icon_window_silent "null"
+#set -g @catppuccin_icon_window_activity "󱅫 "
+#set -g @catppuccin_icon_window_bell "null"
+#
+# Load catppuccin
+run $XDG_CONFIG_HOME/tmux/plugins/tmux/catppuccin.tmux
 
-set -g @catppuccin_window_status "icon"
+set -gF window-status-style "bg=#{@thm_bg},fg=#{@thm_fg}"
+set -gF window-status-current-style "bg=#{@thm_peach},fg=#{@thm_crust},bold"
+
+## Right side of status bar
+set -g status-right "#{E:@catppuccin_status_clima}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -ag status-right "#{E:@catppuccin_status_date_time}"
+set -ag status-right "#{E:@catppuccin_status_host}"
+
+## Left side of status bar
+set -g status-left "#{E:@catppuccin_status_session}"
 
 #####################
 # Plugins Section   #
@@ -167,8 +182,8 @@ set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'xafarr/tmux-clima'
 
-if "test ! -d ~/.tmux/plugins/tpm" \
-   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+if "test ! -d $XDG_CONFIG_HOME/tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm $XDG_CONFIG_HOME/tmux/plugins/tpm && $XDG_CONFIG_HOME/tmux/plugins/tpm/bin/install_plugins'"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
+run -b '$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm'
