--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -62,7 +62,7 @@ set-option -g status-right-length "100"
 setw -g window-status-separator ""
 
 # Easy config reload
-bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded 🚀"
+bind-key r source-file $XDG_CONFIG_HOME/tmux/tmux.conf \; display-message "tmux.conf reloaded 🚀"
 
 # No delay for escape key press
 set -sg escape-time 0
@@ -118,53 +118,51 @@ set -g mouse on
 # Set clipboard on
 set -g set-clipboard on
 
+# Catppuccin Config
 set -g @catppuccin_flavor "macchiato"
-set -g @catppuccin_window_status "icon"
-set -g @catppuccin_window_status_style "custom"
-set -g @catppuccin_date_time_text "%a %d %b,%Y %I:%M %p"
-set -g @catppuccin_session_icon " "
-set -g @catppuccin_clima_icon "󰔐 "
-set -g @catppuccin_window_left_separator " "
-set -g @catppuccin_window_right_separator ""
-#set -g @catppuccin_window_middle_separator "│"
+
+set -g @catppuccin_window_status_style "rounded"
 set -g @catppuccin_window_number_position "left"
 
+set -g @catppuccin_window_status "icon"
 set -g @catppuccin_window_default_fill "all"
-set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_default_text "│ #W"
 
 set -g @catppuccin_window_current_fill "all"
-set -g @catppuccin_window_current_text "#W"
-set -g @catppuccin_window_current_style "bold"
+set -g @catppuccin_window_current_text "#[fg=#{@thm_surface_0},bold]│ #W"
+set -g @catppuccin_window_current_color "#{@thm_surface_1}, bold"
 
 set -g @catppuccin_status_left_separator  " "
 set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_right_separator_inverse "no"
 set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
-#set -g @catppuccin_directory_text "#{pane_current_path}"
 
-set -g @catppuccin_icon_window_last "null"
-set -g @catppuccin_icon_window_current "null"
-set -g @catppuccin_window_zoom_icon " "
-#set -g @catppuccin_icon_window_mark "null"
-#set -g @catppuccin_icon_window_silent "null"
-#set -g @catppuccin_icon_window_activity "󱅫 "
-#set -g @catppuccin_icon_window_bell "null"
-#
+# Catppuccin Module Specific Config
+set -g @catppuccin_date_time_text "%a %d %b,%Y %I:%M %p"
+set -g @catppuccin_session_icon " "
+set -g @catppuccin_clima_icon "󰔐 "
+
+set -g @catppuccin_directory_text "#{pane_current_path}"
+
+set -g @catppuccin_window_flags_icon_last ""
+set -g @catppuccin_window_flags_icon_current ""
+set -g @catppuccin_window_flags_icon_zoom "  "
+set -g @catppuccin_window_flags_icon_mark ""
+set -g @catppuccin_window_flags_icon_silent ""
+set -g @catppuccin_window_flags_icon_activity " 󱅫 "
+set -g @catppuccin_window_flags_icon_bell ""
+
 # Load catppuccin
 run $XDG_CONFIG_HOME/tmux/plugins/tmux/catppuccin.tmux
 
-set -gF window-status-style "bg=#{@thm_bg},fg=#{@thm_fg}"
-set -gF window-status-current-style "bg=#{@thm_peach},fg=#{@thm_crust},bold"
-
-## Right side of status bar
+# Right side of status bar
 set -g status-right "#{E:@catppuccin_status_clima}"
 set -ag status-right "#{E:@catppuccin_status_uptime}"
 set -ag status-right "#{E:@catppuccin_status_date_time}"
 set -ag status-right "#{E:@catppuccin_status_host}"
 
-## Left side of status bar
-set -g status-left "#{E:@catppuccin_status_session}"
+# Left side of status bar
+set -g status-left "#{E:@catppuccin_status_session} "
 
 #####################
 # Plugins Section   #
