Remove unnecessary config from tmux

--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -129,7 +129,7 @@ set -g @catppuccin_window_default_fill "all"
 set -g @catppuccin_window_default_text "│ #W"
 
 set -g @catppuccin_window_current_fill "all"
-set -g @catppuccin_window_current_text "#[fg=#{@thm_surface_0},bold]│ #W"
+set -g @catppuccin_window_current_text "│ #W"
 set -g @catppuccin_window_current_color "#{@thm_surface_1}, bold"
 
 set -g @catppuccin_status_left_separator  " "
