Fix clima plugin for catppuccin tmux

--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -156,7 +156,7 @@ set -g @catppuccin_window_flags_icon_bell ""
 run $XDG_CONFIG_HOME/tmux/plugins/tmux/catppuccin.tmux
 
 # Right side of status bar
-set -g status-right "#{E:@catppuccin_status_clima}"
+set -gF status-right "#{E:@catppuccin_status_clima}"
 set -ag status-right "#{E:@catppuccin_status_uptime}"
 set -ag status-right "#{E:@catppuccin_status_date_time}"
 set -ag status-right "#{E:@catppuccin_status_host}"
