--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -75,8 +75,8 @@ bind -n S-Left  previous-window
 bind -n S-Right next-window
 
 # Swap window left and right
-bind-key -n C-S-Left swap-window -t -1\; select-window -t -1
-bind-key -n C-S-Right swap-window -t +1\; select-window -t +1
+bind-key -n C-S-M-Left swap-window -t -1\; select-window -t -1
+bind-key -n C-S-M-Right swap-window -t +1\; select-window -t +1
 
 # Set easier window split keys
 bind-key v split-window -h
