Change starship vim character when in vim mode in zsh

--- a/terminal/starship/starship.toml
+++ b/terminal/starship/starship.toml
@@ -51,6 +51,10 @@ format = " [$state($progress_current$progress_total)]($style)"
 [character]
 success_symbol = " [ ](bold green)"
 error_symbol = " [ ](bold red)"
+vimcmd_symbol = " [ ](bold green)"
+vimcmd_replace_symbol = " [ ](bold purple)"
+vimcmd_replace_one_symbol = " [ ](bold purple)"
+vimcmd_visual_symbol = " [ ](bold yellow)"
 
 # No need for env variables as starship provides a way to show your current distro
 [os]
