Change tmux config to align with catppuccin upgrade

--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -59,7 +59,7 @@ set-option -g status-left-style none
 set-option -g status-left-length "100"
 set-option -g status-right-style none
 set-option -g status-right-length "100"
-setw -g window-status-separator ""
+set -g window-status-separator " "
 
 # Easy config reload
 bind-key r source-file $XDG_CONFIG_HOME/tmux/tmux.conf \; display-message "tmux.conf reloaded 🚀"
@@ -124,16 +124,16 @@ set -g @catppuccin_flavor "macchiato"
 set -g @catppuccin_window_status_style "rounded"
 set -g @catppuccin_window_number_position "left"
 
-set -g @catppuccin_window_status "icon"
-set -g @catppuccin_window_default_fill "all"
-set -g @catppuccin_window_default_text "│ #W"
+set -g @catppuccin_window_flags "icon"
+set -g @catppuccin_window_text_color "#{@catppuccin_window_number_color}"
+set -g @catppuccin_window_text "│ #W"
 
-set -g @catppuccin_window_current_fill "all"
 set -g @catppuccin_window_current_text "│ #W"
-set -g @catppuccin_window_current_color "#{@thm_surface_1}, bold"
+set -g @catppuccin_window_current_number_color "#{@thm_peach}"
+set -g @catppuccin_window_current_text_color "#{@catppuccin_window_current_number_color}"
 
 set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_right_separator "#[fg=#{@_ctp_module_text_bg}]"
 set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
 
@@ -179,6 +179,7 @@ set -g @plugin 'xamut/tmux-network-bandwidth'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'xafarr/tmux-clima'
+set -g @plugin 'tmux-plugins/tmux-cpu'
 
 if "test ! -d $XDG_CONFIG_HOME/tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm $XDG_CONFIG_HOME/tmux/plugins/tpm && $XDG_CONFIG_HOME/tmux/plugins/tpm/bin/install_plugins'"
