Use bold text in current window in tmux

--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -128,7 +128,8 @@ set -g @catppuccin_window_flags "icon"
 set -g @catppuccin_window_text_color "#{@catppuccin_window_number_color}"
 set -g @catppuccin_window_text "│ #W"
 
-set -g @catppuccin_window_current_text "│ #W"
+set -g @catppuccin_window_current_number "#[bold]#I"
+set -g @catppuccin_window_current_text "#[bold]│ #W"
 set -g @catppuccin_window_current_number_color "#{@thm_peach}"
 set -g @catppuccin_window_current_text_color "#{@catppuccin_window_current_number_color}"
 
