--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -1,5 +1,5 @@
 # Initial setup
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
 set -g status-keys vi
 set-option -g focus-events on
 
