Change uptime status color in tmux status bar

--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -142,6 +142,7 @@ set -g @catppuccin_status_connect_separator "no"
 set -g @catppuccin_date_time_text "%a %d %b,%Y %I:%M %p"
 set -g @catppuccin_session_icon " "
 set -g @catppuccin_clima_icon "󰔐 "
+set -g @catppuccin_uptime_color "#{@thm_green}"
 
 set -g @catppuccin_directory_text "#{pane_current_path}"
 
