Change the icon of starship terminal prompt

--- a/terminal/starship/starship.toml
+++ b/terminal/starship/starship.toml
@@ -49,8 +49,8 @@ format = " [$state($progress_current$progress_total)]($style)"
 
 # Change the default prompt characters
 [character]
-success_symbol = " [ ](bold green)"
-error_symbol = " [ ](bold red)"
+success_symbol = " [ ](bold green)"
+error_symbol = " [ ](bold red)"
 vimcmd_symbol = " [ ](bold green)"
 vimcmd_replace_symbol = " [ ](bold purple)"
 vimcmd_replace_one_symbol = " [ ](bold purple)"
