--- a/terminal/kitty/kitty.conf
+++ b/terminal/kitty/kitty.conf
@@ -1,15 +1,35 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
 #: Fonts {{{
-
-font_family      JetBrains Mono Regular
-bold_font        JetBrains Mono Bold
-italic_font      JetBrains Mono Italic
-bold_italic_font JetBrains Mono Bold Italic
+# BEGIN_KITTY_FONTS
+# Font ligatures settings for Jet Brains Mono Font:
+# https://github.com/JetBrains/JetBrainsMono/wiki/OpenType-features
+font_family      family='JetBrains Mono' style=Regular
+bold_font        family='JetBrains Mono' style=Bold
+italic_font      family='JetBrains Mono' style='Regular Italic'
+bold_italic_font family='JetBrains Mono' style='Bold Italic'
 font_size 17.0
 disable_ligatures cursor
 undercurl_style thin-dense
 text_composition_strategy platform
+# modify_font cell_height 110%
+# END_KITTY_FONTS
+
+
+# BEGIN_KITTY_SYMBOL_MAPS
+symbol_map U+E000-U+F8FF,U+F0000-U+FFFFF,U+100000-U+10ffff Symbols Nerd Font Mono
+# END_KITTY_SYMBOL_MAPS
+
+#font_family      JetBrains Mono Regular
+#bold_font        JetBrains Mono Bold
+#italic_font      JetBrains Mono Italic
+#bold_italic_font JetBrains Mono Bold Italic
+#font_size 17.0
+#disable_ligatures cursor
+#undercurl_style thin-dense
+#text_composition_strategy platform
+#
+#symbol_map U+e000-U+e00a,U+ea60-U+ebeb,U+e0a0-U+e0c8,U+e0ca,U+e0cc-U+e0d7,U+e200-U+e2a9,U+e300-U+e3e3,U+e5fa-U+e6b1,U+e700-U+e7c5,U+ed00-U+efc1,U+f000-U+f2ff,U+f000-U+f2e0,U+f300-U+f372,U+f400-U+f533,U+f0001-U+f1af0 Symbols Nerd Font Mono
 
 #: }}}
 
