Change kitty font and remove curly l feature. Change key icon as well

--- a/terminal/kitty/kitty.conf
+++ b/terminal/kitty/kitty.conf
@@ -4,10 +4,10 @@
 # BEGIN_KITTY_FONTS
 # Font ligatures settings for Jet Brains Mono Font:
 # https://github.com/JetBrains/JetBrainsMono/wiki/OpenType-features
-font_family      family='JetBrains Mono' style=Regular features='+zero +cv05 +cv06 +cv07 +cv16 +cv18 +cv19 +cv20'
-bold_font        family='JetBrains Mono' style=Bold features='+zero +cv05 +cv06 +cv07 +cv16 +cv18 +cv19 +cv20'
-italic_font      family='JetBrains Mono' style='Regular Italic' features='+zero +cv05 +cv06 +cv07 +cv16 +cv18 +cv19 +cv20'
-bold_italic_font family='JetBrains Mono' style='Bold Italic' features='+zero +cv05 +cv06 +cv07 +cv16 +cv18 +cv19 +cv20'
+font_family      family='JetBrainsMono Nerd Font Mono' style=Regular features='+zero +cv06 +cv07 +cv16 +cv18 +cv19 +cv20'
+bold_font        family='JetBrainsMono Nerd Font Mono' style=Bold features='+zero +cv06 +cv07 +cv16 +cv18 +cv19 +cv20'
+italic_font      family='JetBrainsMono Nerd Font Mono' style='Regular Italic' features='+zero +cv06 +cv07 +cv16 +cv18 +cv19 +cv20'
+bold_italic_font family='JetBrainsMono Nerd Font Mono' style='Bold Italic' features='+zero +cv06 +cv07 +cv16 +cv18 +cv19 +cv20'
 font_size 17.0
 disable_ligatures cursor
 undercurl_style thin-dense
