Replace the package tool icon in starship.toml

--- a/terminal/starship/starship.toml
+++ b/terminal/starship/starship.toml
@@ -155,7 +155,7 @@ format = "[  $number]($style)"
 
 # Configure the package version
 [package]
-format = "[  $version]($style)"
+format = "[  $version]($style)"
 style = "bold dimmed white"
 disabled = true
 
