Change theme to catppuccin latte for terminal and neovim

--- a/terminal/git/config
+++ b/terminal/git/config
@@ -67,7 +67,7 @@
   path = ~/.additional.gitconfig
 
 [delta]
-  features = catppuccin-macchiato
+  features = catppuccin-latte
   side-by-side = true
   max-line-length = 0
   width = variable
