--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -119,18 +119,20 @@ set -g mouse on
 set -g set-clipboard on
 
 # Catppuccin Config
-set -g @catppuccin_flavor "macchiato"
+set -g @catppuccin_flavor "latte"
 
 set -g @catppuccin_window_status_style "rounded"
 set -g @catppuccin_window_number_position "left"
 
 set -g @catppuccin_window_flags "icon"
+set -g @catppuccin_window_number_color "#{@thm_surface_0}"
 set -g @catppuccin_window_text_color "#{@catppuccin_window_number_color}"
-set -g @catppuccin_window_text "│ #W"
+set -g @catppuccin_window_number "#[fg=#{@thm_overlay_2}]#I"
+set -g @catppuccin_window_text "#[fg=#{@thm_overlay_2}]│ #W"
 
-set -g @catppuccin_window_current_number "#[bold]#I"
-set -g @catppuccin_window_current_text "#[bold]│ #W"
-set -g @catppuccin_window_current_number_color "#{@thm_peach}"
+set -g @catppuccin_window_current_number "#[fg=#{@thm_subtext_0},bold]#I"
+set -g @catppuccin_window_current_text "#[fg=#{@thm_subtext_0},bold]│ #W"
+set -g @catppuccin_window_current_number_color "#{@thm_yellow}"
 set -g @catppuccin_window_current_text_color "#{@catppuccin_window_current_number_color}"
 
 set -g @catppuccin_status_left_separator  " "
@@ -141,6 +143,7 @@ set -g @catppuccin_status_connect_separator "no"
 # Catppuccin Module Specific Config
 set -g @catppuccin_date_time_text " %a %d %b,%Y %I:%M %p"
 set -g @catppuccin_session_icon " "
+set -g @catppuccin_session_text "#[bold] #S"
 set -g @catppuccin_clima_icon "󰔐 "
 set -g @catppuccin_uptime_color "#{@thm_green}"
 
