Change starship prompt color to blue

--- a/terminal/starship/starship.toml
+++ b/terminal/starship/starship.toml
@@ -115,7 +115,7 @@ show_always = false
 truncation_length = 4
 truncation_symbol = "…/"
 truncate_to_repo = false
-style = "sky"
+style = "blue"
 repo_root_style =  "blue bold"
 read_only_style = "197"
 read_only = " 🔒"
