--- a/terminal/kitty/themes/catppuccin-latte.conf
+++ b/terminal/kitty/themes/catppuccin-latte.conf
@@ -9,8 +9,8 @@
 
 
 # The basic colors
-foreground              #4c4f69
-background              #eff1f5
+foreground              #2d2f3f
+background              #ffffff
 selection_foreground    #eff1f5
 selection_background    #dc8a78
 
