--- a/terminal/starship/starship.toml
+++ b/terminal/starship/starship.toml
@@ -259,7 +259,7 @@ sky = "#04a5e5"
 sapphire = "#209fb5"
 blue = "#1e66f5"
 lavender = "#7287fd"
-text = "#4c4f69"
+text = "#2d2f3f"
 subtext1 = "#5c5f77"
 subtext0 = "#6c6f85"
 overlay2 = "#7c7f93"
@@ -268,7 +268,7 @@ overlay0 = "#9ca0b0"
 surface2 = "#acb0be"
 surface1 = "#bcc0cc"
 surface0 = "#ccd0da"
-base = "#eff1f5"
+base = "#ffffff"
 mantle = "#e6e9ef"
 crust = "#dce0e8"
 
