Make the current tmux window title bold

--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -130,8 +130,8 @@ set -g @catppuccin_window_text_color "#{@catppuccin_window_number_color}"
 set -g @catppuccin_window_number "#[fg=#{@thm_overlay_2}]#I"
 set -g @catppuccin_window_text "#[fg=#{@thm_overlay_2}]│ #W"
 
-set -g @catppuccin_window_current_number "#[fg=#2d2f3f]#I"
-set -g @catppuccin_window_current_text "#[fg=#2d2f3f]│ #W"
+set -g @catppuccin_window_current_number "#[fg=#2d2f3f,bold]#I"
+set -g @catppuccin_window_current_text "#[fg=#2d2f3f,bold]│ #W"
 set -g @catppuccin_window_current_number_color "#{@thm_yellow}"
 set -g @catppuccin_window_current_text_color "#{@catppuccin_window_current_number_color}"
 
