--- a/terminal/kitty/kitty.conf
+++ b/terminal/kitty/kitty.conf
@@ -5,9 +5,9 @@
 # Font ligatures settings for Jet Brains Mono Font:
 # https://github.com/JetBrains/JetBrainsMono/wiki/OpenType-features
 # https://github.com/kovidgoyal/kitty/issues/1463
-font_family      family='JetBrainsMono Nerd Font Mono' style=Regular features='+zero +cv06 +cv07 +cv16 +cv18 +cv19 +cv20'
+font_family      family='JetBrainsMono Nerd Font Mono' style=Medium features='+zero +cv06 +cv07 +cv16 +cv18 +cv19 +cv20'
 bold_font        family='JetBrainsMono Nerd Font Mono' style=Bold features='+zero +cv06 +cv07 +cv16 +cv18 +cv19 +cv20'
-italic_font      family='JetBrainsMono Nerd Font Mono' style='Regular Italic' features='+zero +cv06 +cv07 +cv16 +cv18 +cv19 +cv20'
+italic_font      family='JetBrainsMono Nerd Font Mono' style='Medium Italic' features='+zero +cv06 +cv07 +cv16 +cv18 +cv19 +cv20'
 bold_italic_font family='JetBrainsMono Nerd Font Mono' style='Bold Italic' features='+zero +cv06 +cv07 +cv16 +cv18 +cv19 +cv20'
 font_size 16.0
 disable_ligatures cursor
