--- a/terminal/lazygit/config.yml
+++ b/terminal/lazygit/config.yml
@@ -1,4 +1,4 @@
 git:
   paging:
     colorArg: always
-    pager: delta --dark --paging=never
+    pager: delta --${THEME_BACKGROUND} --paging=never
